--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,7 @@
     {
       "type": "node",
       "request": "launch",
-      "name": "Debug shafferography",
+      "name": "Debug shphotoviewer",
       "skipFiles": [
         "<node_internals>/**"
       ],
