--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "backend",
   "version": "0.0.1",
-  "description": "backend for shafferography",
+  "description": "backend for shphotoviewer",
   "main": "index.js",
   "dependencies": {
     "axios": "^1.4.0",
