--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,20 +10,53 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.9.0",
+    "@mui/x-date-pickers": "^6.18.0",
+    "@mui/x-tree-view": "^6.17.0",
+    "axios": "^0.27.2",
+    "dayjs": "^1.11.10",
+    "lodash": "^4.17.21",
+    "path-browserify": "^1.0.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-modal": "^3.15.1",
+    "react-redux": "^8.0.2",
+    "react-router-dom": "^6.3.0",
+    "react-select": "^5.4.0",
+    "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
-    "@types/react": "^18.3.18",
+    "@types/lodash": "^4.14.182",
+    "@types/node": "^22.10.2",
+    "@types/path-browserify": "^1.0.0",
+    "@types/react": "^18.3.17",
     "@types/react-dom": "^18.3.5",
+    "@types/react-modal": "^3.13.1",
+    "@types/react-select": "^5.0.1",
+    "@types/uuidv4": "^5.0.0",
     "@vitejs/plugin-react": "^4.3.4",
+    "case-sensitive-paths-webpack-plugin": "2.3.0",
+    "copy-webpack-plugin": "^4.2.3",
+    "css-loader": "^6.5.1",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
-    "globals": "^15.14.0",
+    "genversion": "^3.0.2",
+    "globals": "^15.13.0",
+    "source-map-loader": "^2.0.0",
+    "style-loader": "^3.3.1",
+    "ts-loader": "^8.0.7",
     "typescript": "~5.6.2",
-    "typescript-eslint": "^8.18.2",
-    "vite": "^6.0.5"
+    "typescript-eslint": "^8.18.1",
+    "vite": "^6.0.3",
+    "webpack": "5.64.4",
+    "webpack-cli": "4.9.1"
   }
 }
