--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.9.0",
     "@mui/x-date-pickers": "^6.18.0",
     "@mui/x-tree-view": "^6.17.0",
+    "@types/react-window": "^1.8.8",
     "axios": "^0.27.2",
     "dayjs": "^1.11.10",
     "lodash": "^4.17.21",
@@ -27,6 +28,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-select": "^5.4.0",
+    "react-window": "^1.8.11",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
